--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="createUser">Create User</string>
     <string name="save">Save</string>
+    <string name="load">Load</string>
 </resources>
